[package]
name = "hunter_and_prey"
version = "0.1.0"
edition = "2021"
description = "2D 'Game' where competing neural networks (hunter and prey) try to survive."
authors = ["LufixSch <https://github.com/lufixSch>"]
license-file = "LICENSE"
repository = "https://github.com/lufixSch/hunter_and_prey"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3